manifests/user/public/images.yml
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: images-sftp
  namespace: public
  labels:
    app: images-sftp
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: images-sftp
  template:
    metadata:
      labels:
        app: images-sftp
    spec:
      containers:
        - name: app
          image: panubo/sshd
          ports:
            - containerPort: 22
          volumeMounts:
            - name: images
              mountPath: /data/i.underyx.me
            - name: config
              mountPath: /etc/ssh
            - name: authorized-keys
              mountPath: /etc/authorized_keys
          lifecycle:
            postStart:
              exec:
                command: ["chmod", "0777", "/data/i.underyx.me"]
          livenessProbe:
            tcpSocket:
              port: 22
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              cpu: 10m
              memory: 4Mi
            requests:
              cpu: 5m
              memory: 1Mi
      volumes:
        - name: fs-root
          flexVolume:
            driver: ceph.rook.io/rook
            fsType: ceph
            options:
              fsName: media-fs
              clusterNamespace: rook-ceph
              path: /
        - name: images
          flexVolume:
            driver: ceph.rook.io/rook
            fsType: ceph
            options:
              fsName: media-fs
              clusterNamespace: rook-ceph
              path: /images
        - name: config
          persistentVolumeClaim:
            claimName: images-sftp-config-pvc
        - name: authorized-keys-source
          configMap:
            name: images-sftp-authorized-keys
        - name: authorized-keys
          emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: images-sftp-svc
  namespace: public
spec:
  ports:
    - port: 22
      targetPort: 22
      nodePort: 30464 # keypad code for 30IUM - i.underyx.me
  type: NodePort
  selector:
    app: images-sftp
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: images-web
  namespace: public
  labels:
    app: images-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: images-web
  template:
    metadata:
      labels:
        app: images-web
    spec:
      containers:
        - name: app
          image: nginx:1.15-alpine
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
          volumeMounts:
            - name: images
              mountPath: /usr/share/nginx/html
              readOnly: yes
          resources:
            limits:
              cpu: 50m
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 2Mi
      volumes:
        - name: images
          flexVolume:
            driver: ceph.rook.io/rook
            fsType: ceph
            options:
              fsName: media-fs
              clusterNamespace: rook-ceph
              path: /images
---
kind: Service
apiVersion: v1
metadata:
  name: images-web-svc
  namespace: public
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: images-web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: images-web-ingress
  namespace: public
spec:
  rules:
    - host: i.underyx.me
      http:
        paths:
          - backend:
              serviceName: images-web-svc
              servicePort: 80
            path: /
  tls:
    - hosts:
        - underyx.me
      secretName: images-web-tls
