manifests/user/public/under-ee.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: under-ee
  namespace: public
  labels:
    app: under.ee
spec:
  replicas: 2
  selector:
    matchLabels:
      app: under.ee
  template:
    metadata:
      labels:
        app: under.ee
    spec:
      containers:
      - name: app
        image: underyx/under.ee
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          limits:
            cpu: 50m
            memory: 32Mi
          requests:
            cpu: 10m
            memory: 2Mi
---
kind: Service
apiVersion: v1
metadata:
  name: under-ee-svc
  namespace: public
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: under.ee
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: under-ee-ingress
  namespace: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: under.ee
    http:
      paths:
      - backend:
          serviceName: under-ee-svc
          servicePort: 80
        path: /
  - host: www.under.ee
    http:
      paths:
      - backend:
          serviceName: under-ee-svc
          servicePort: 80
        path: /
  tls:
  - hosts:
    - under.ee
    - www.under.ee
    secretName: under-ee-tls
