manifests/user/public/underyx-me.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: underyx-me
  namespace: public
  labels:
    app: underyx.me
spec:
  replicas: 2
  selector:
    matchLabels:
      app: underyx.me
  template:
    metadata:
      labels:
        app: underyx.me
    spec:
      containers:
      - name: app
        image: underyx/underyx.me
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          limits:
            cpu: 50m
            memory: 32Mi
          requests:
            cpu: 10m
            memory: 2Mi
---
kind: Service
apiVersion: v1
metadata:
  name: underyx-me-svc
  namespace: public
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: underyx.me
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: underyx-me-ingress
  namespace: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: underyx.me
    http:
      paths:
      - backend:
          serviceName: underyx-me-svc
          servicePort: 80
        path: /
  - host: www.underyx.me
    http:
      paths:
      - backend:
          serviceName: underyx-me-svc
          servicePort: 80
        path: /
  tls:
  - hosts:
    - underyx.me
    - www.underyx.me
    secretName: underyx-me-tls
